# e-commerce-expert-assistant

./: .dockerignore  Dockerfile  README.md  Time Estimates.csv  compose_start.sh  docker-compose.yml  pyproject.toml  start.sh  ui.html
.github/workflows/: docker-image.yml
assets/: langfuse-traces.webm
data/: order_data.parquet  product_information.parquet
scripts/: create_sqlite_database.py  ingest_embeddings.py
src/: chunk_rewriting.py  emb.py  llm.py  main.py  mock_api.py  models.py  prompts.py  tools.py  utils.py  vectorstore.py
static/: index.html
templates/: chat.html
