[project]
name = "e-commerce-expert-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "gradio>=5.21.0",
    "langfuse>=2.57.5",
    "openai>=1.58.1",
    "polars>=1.18.0",
    "qdrant-client>=1.12.2",
]
